--- a/课程设计-17组/index.html
+++ b/课程设计-17组/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <title>Melody Music</title>
         <link rel="stylesheet" href="../课程设计-17组/css/main.css" type="text/css">
         <link rel="shortcut icon" href="../课程设计-17组/img/favicon.ico">
