--- a/课程设计-17组/index.html
+++ b/课程设计-17组/index.html
@@ -37,7 +37,7 @@
                     <div class="header_form">
                         <form action="#" class="header_search" name="myform" onsubmit="return false;">
                             <input type="text" placeholder="音乐/视频/电台/用户" onkeydown="check_enter()" name="srh">
-                            <a href="search_music.html"><span class="btn" onclick="searchMusic()"></span></a><!--字体型图标-->
+                            <a href="#"><span class="btn"></span></a><!--字体型图标-->
                         </form>
                     </div>
                 </div>
